--- a/purebutter/home/templates/home/index.html
+++ b/purebutter/home/templates/home/index.html
@@ -108,17 +108,34 @@
             {% block content %}
               <div class="row justify-content-center">
                 <div class="col-lg-12 text-center">
-                  <h2 class="text-white mt-0">Colette et Remy</h2>
-                  <hr class="divider light my-4">
+                  <h2 class="text-white mt-0">De la ratatouille aux croissants</h2>
+                    <hr class="divider light my-4">
+                    <p class="card-text">Pur Beurre est l'initiative de deux amoureux de la gastronomie française, Colette Tatou et Rémy,
+                        que vous avez déjà certainement rencontrés dans notre excellent restaurant Ratatouille. </p>
                     <div class="row justify-content-center">
                         <div class="col-lg-6 col-sm-12 text-center">
-                            <!-- TODO: Photo Colette -->
-                            <p class="text-white-50 mb-4">Colette est une amoureuse de cuisine qui mange beaucoup trop, il semblerait
-                            qu'elle soit compulsive, et addict au bio</p>
+                            <img src="{% static 'home/img/colette.png' %}" height="400px" width="200px">
+                            <hr class="divider light my-4">
+                            <strong>Colette Tatou</strong>
+                            <hr class="divider light my-4">
+                            <p class="text-white-50 mb-4"> "Nous aimons tous manger, surtout en France !
+                                Personnellement, une baguette fraîche, du bon fromage de chèvre et un bon vin rouge me
+                                suffisent amplement. Comme tout le monde, je fais mes courses au supermarché. Mais petit
+                                à petit je me suis rendue compte, surtout lorsque nous avons ouvert le restaurant, que
+                                je pouvais remplacer les produits aseptisés que j'avais l'habitude d'acheter par de bons
+                                produits du terroir Et souvent pour le même prix !"</p>
                         </div>
                         <div class="col-lg-6 col-sm-12 text-center">
-                            <!-- TODO: Photo Remy -->
-                            <p class="text-white-50 mb-4">Remy est un rat, c'est étrange en cuisine mais il s'en sort quand même, promis !</p>
+                            <img src="{% static 'home/img/remy.png' %}" height="400px" width="400px">
+                            <hr class="divider light my-4">
+                            <strong>Remy</strong>
+                            <hr class="divider light my-4">
+                            <p class="text-white-50 mb-4"> "Pour ma part je me rendais déjà dans bien des magasins car
+                                j'aime beaucoup me balader, surtout dans les caves et les cuisines. Je connaissais par
+                                coeur le contenu des boutiques bio (dont je raffole) ainsi que les ingrédients de tous
+                                les aliments vendus. Lorsque Colette m'a demandé si elle pouvait remplacer son Nutella
+                                matinal par un aliment plus sain, je savais tout de suite où le trouver. L'idée de Pur
+                                Beurre était née !"</p>
                         </div>
                     </div>
                 </div>
